# connect

./: .gitignore  Cargo.toml  README.md  pyproject.toml  scripts.toml
assets/models/: model.glb  model.gltf
assets/shaders/: ground_plane.wgsl  infinite_grid.wgsl  water.wgsl
recipes/0_hello_world/: config.toml  hello_world.py
src/: camera.rs  knob.rs  main.rs  scene.rs  streaming.rs  types.rs
src/executors/: discrete.rs  mod.rs  streaming.rs
src/gym3d/: camera.rs  mod.rs  scene.rs
src/panels/: mod.rs  scripts_panel.rs  side_panels.rs
src/scripts/: echo.py  stream_example.py
test_apps/0_hello_world/: instructions.md
test_apps/1_kitchen_sink/: config.toml  instructions.md  read_csv.py  stream_example.py
test_apps/2_circuit_pass_fail/: circuit_pass_fail.py  config.toml  instructions.md
test_apps/4_flight_replay/: config.toml  flight_replay.py
