[package]
name = "pydag"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_egui = { version = "0.31.1", features = ["default_fonts"] }
egui_plot = "0.29"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
zmq = "0.10.0"
crossbeam-channel = "0.5"
async-std = "1.13.0"
serde_json = "1.0.133"
image = "0.24"

