[package]
name = "connect"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = "0.15"
bevy_egui = { version = "0.31.1", features = ["default_fonts"] }
egui_plot = "0.29"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
zmq = "0.10.0"
crossbeam-channel = "0.5"
async-std = "1.13.0"
serde_json = "1.0.133"
egui_file = "0.19.0"
tinyfiledialogs = "3.9.1"
egui_commonmark = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"